# videna

./: .metadata  CHANGELOG.md  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  prebuild.gradle  settings.gradle
android/download/: CMakeLists.txt
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/videna_example/: MainActivity.kt
example/lib/: main.dart
example/linux/flutter/: generated_plugins.cmake
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: exceptions.dart  ffi.dart  frame.dart  install.dart  media_metadata.dart  videna.dart  video.dart
linux/: CMakeLists.txt
src/: CMakeLists.txt  navigator.c  navigator.h
windows/: CMakeLists.txt
